# Jetbot_Car

./: README.md
jetbotcar/: CMakeLists.txt  package.xml  params.yaml  setup.py
jetbotcar/bagfiles/: 2021-04-09-10-58-51.bag  2021-04-09-15-11-39.bag  OpenLooDrive_05.bag  OpenLooDrive_055.bag  OpenLooDrive_06.bag  OpenLooDrive_full_speed.bag  OpenLoopDrive_FullSteering.bag  finial_track_longi_control.bag  finial_track_longi_control_2.bag  finial_track_throttle_0.45.bag  finial_track_throttle_0.5.bag  finial_track_throttle_0.52.bag  jetracer_test1.bag  jetracer_test2.bag  kp_2.0.bag  kp_2.0_chicane.bag  kp_2.3.bag  kp_2.3_chicane.bag  kp_2.5.bag  kp_2.5_chicane.bag  kp_3_ki_0.125_chicane.bag  kp_3_ki_0.125_chicane_2.bag  kp_3_ki_0.125_chicane_3.bag  kp_3_ki_0.125_double_lane_change.bag  kp_3_ki_0.125_double_lane_change_2.bag  kp_3_ki_0.125_double_lane_change_3.bag  kp_3_ki_0.125_oval.bag  kp_3_ki_0.125_oval_2.bag  kp_3_ki_0.125_oval_3.bag  kp_3_ki_0.125_straight_deviation_200.bag  kp_3_ki_0.125_straight_deviation_200_2.bag  kp_3_ki_0.125_straight_deviation_nagative200.bag  kp_3_ki_0.125_straight_deviation_nagative200_2.bag  kp_3_kp_0.9_oval_longiControl.bag  oval_dual_PID.bag  oval_dual_PID_2.bag  test1.bag  test2.bag  test3.bag  test4.bag  (+6 more)
jetbotcar/calibration/: calibration.py  camera.py  undistort.py
jetbotcar/include/jetbotcar/: car_params.hpp  car_state.hpp  jetbotDynamics.hpp
jetbotcar/launch/: .jetRacer.launch.swp  jetRacer.launch  jetbotSimulator.launch  racecar_model.launch
jetbotcar/msg/: jetErrorMsg.msg
jetbotcar/node/: characterPrint.cpp  jetbotDrivePublisher.cpp  jetbotSimulator.cpp  keyboard.cpp
jetbotcar/odom_subscriber/: CMakeLists.txt  package.xml
jetbotcar/odom_subscriber/src/: odom_sub.cpp
jetbotcar/scripts/: __init__.py  image_process.py  jetRacerDrive.py  jetracer_racecar.py  lane_detection.py  lane_detection_contour_jetracer bkp.py  lane_detection_contour_jetracer.py  lane_detection_contour_jetracer_2.py  lane_detection_contour_jetracer_Apr_10.py  lane_detection_contour_jetracer_with_warning.py  motorDrive.py  pid_controller.py  pid_controller_2.py  pid_controller_3.py  pid_controller_4.py  pid_controller_4_bkp.py  pid_controller_5.py  pid_controller_5_1.py  pid_controller_6.py  stop_button.py
jetbotcar/src/: jetBotDynamics.cpp
